# autosubs-lite

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  requirements.txt  test_cli.py  vite.config.ts
.github/workflows/: release.yml
python/: main.py  resegmenter.py  srt_writer.py  subtitle_reader.py  task_file.py  transcriber.py  translator.py
scripts/: build_python.py  bump_version.sh  setup.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BottomBar.tsx  ConfigPanel.tsx  PrefsPanel.tsx  QueuePanel.tsx  retryConfig.ts
src/i18n/: locales.ts  useLocale.ts
src/stores/: appStore.ts
src/styles/: theme.css
