[package]
name = "autosubs-lite"
version = "0.1.3"
description = "AutoSubs Lite - Batch subtitle generator"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "autosubs_lite_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "autosubs-lite"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2",   features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"
serde            = { version = "1",   features = ["derive"] }
serde_json       = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
panic       = "abort"
codegen-units = 1
lto         = true
opt-level   = "s"
strip       = true
